# gpu_subgraph_matching

./: .gitignore  CMakeLists-old.txt  CMakeLists.txt  README.md  candidate.cu  candidate.h  compile_and_run.sh  graph.cu  graph.h  graph_gpu.h  helper.h  join.cu  join.h  join_bfs.cu  join_bfs.h  main.cu  mem_manager.h  mem_pool.h  test.sh
test/: D_0  D_1  D_2  D_3  D_4  D_5  Q_0  Q_1  Q_10  Q_2  Q_3  Q_4  Q_5  Q_6  Q_7  Q_8  Q_9
